add padding-bottom to the main container

--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -22,6 +22,7 @@
     text-align: center;
     color: #fff;
     position: relative;
+    padding-bottom: 2em;
     .z-index{
         z-index: 10;
     }
