--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -2,6 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 *{
     margin: 0;
@@ -12,20 +13,26 @@
 }
 
 #main-container{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     min-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(57, 57, 233);
+    background-color: rgb(253, 253, 253);
     text-align: center;
     color: #fff;
     position: relative;
+    
     .z-index{
         z-index: 10;
     }
     h1{
+        font-family: 'Pacifico', cursive;
+        color: #000;
         padding:1em 0;
     }
     p{
@@ -88,20 +95,27 @@
 
     svg{
         position: absolute;
-        width: 20%;
+        width: 25%;
     }
 
     #left-svg{
+        
         left: 0;
         top:20;
         transform: translateX(40px);
     }
+    #middle-svg{
+        top: 50%;
+    }
 
     #right-svg{
+        
         right: 0;
         top:50;
         transform: translateX(-40px);
     }
+
+    
 }
 
 // media query for smaller screen
@@ -109,27 +123,22 @@
 
 @media screen and (max-width:412px){
     #main-container{
-        padding: 0 1em 2em 1em;
+        padding: 0 1em 3em 1em;
 
 
         #content{
             
-
             #link{
                 margin-bottom: 4em;
             }
-            svg{
-                position: absolute;
-                width: 60% !important;
-            }
-
+            
             #left-svg{
-                
-                transform: translateX(29px);
+                margin-left: -20px !important;
+                transform: translateX(59px);
             }
         
             #right-svg{
-                
+                margin-right: -50% !important;
                 transform: translateX(-29px);
             }
         
