--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -127,7 +127,7 @@
 
 
         #content{
-            
+            min-height: 100vh;
             #link{
                 margin-bottom: 4em;
             }
