small screen width to 90%

--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -128,6 +128,7 @@
 
         #content{
             min-height: 100vh;
+            width: 90%;
             #link{
                 margin-bottom: 4em;
             }
