--- a/sass/main-style.scss
+++ b/sass/main-style.scss
@@ -79,7 +79,7 @@
                 font-size: 1.5em;
             text-decoration: none;
             transition: text-decoration,color ease-in-out 600ms;
-            color: #000;
+            color: rgb(207, 18, 18);
             font-weight: bold;
             &:hover{
                 color: #fff ;
